--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
     <link rel="stylesheet" href="./styles.css" />
     <script src="./script.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <main>
+      <h1>Etch-a-Sketch</h1>
+      <div class="grid"></div>
+    </main>
+  </body>
 </html>
