adds button that changes the size of the grid

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <main>
       <h1>Etch-a-Sketch</h1>
+      <button type="button" id="gridBtn">Change grid</button>
       <div class="grid"></div>
     </main>
   </body>
