Removes harcoded cell size and adds button that changes grid size

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <main>
       <h1>Etch-a-Sketch</h1>
       <button type="button" id="gridBtn">Change grid</button>
-      <div class="grid"></div>
+      <div class="canvas">
+        <div class="grid"></div>
+      </div>
     </main>
   </body>
 </html>
