Adds clear button

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <main>
       <h1>Etch-a-Sketch</h1>
       <button type="button" id="gridBtn">Change grid</button>
+      <button type="button" id="clearBtn">Clear</button>
       <div class="canvas">
         <div class="grid"></div>
       </div>
