--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
       <h1>Etch-a-Sketch</h1>
       <button type="button" id="gridBtn">Change grid</button>
       <button type="button" id="clearBtn">Clear</button>
+      <div class="slidecontainer">
+        <input
+          type="range"
+          min="4"
+          max="30"
+          value="9"
+          class="slider"
+          id="myRange"
+        />
+      </div>
       <div class="canvas">
         <div class="grid"></div>
       </div>
