--- a/index.html
+++ b/index.html
@@ -8,21 +8,27 @@
     <script src="./script.js" defer></script>
   </head>
   <body>
-    <main>
+    <header>
       <h1>Etch-a-Sketch</h1>
-      <button type="button" id="clearBtn">Clear</button>
-      <div class="slidecontainer">
-        <input
-          type="range"
-          min="4"
-          max="30"
-          value="9"
-          class="slider"
-          id="myRange"
-        />
-      </div>
-      <div class="canvas">
-        <div class="grid"></div>
+    </header>
+    <main>
+      <div class="app">
+        <div class="controls">
+          <button type="button" id="clearBtn">Clear</button>
+          <div class="slidecontainer">
+            <input
+              type="range"
+              min="4"
+              max="30"
+              value="9"
+              class="slider"
+              id="myRange"
+            />
+          </div>
+        </div>
+        <div class="canvas">
+          <div class="grid"></div>
+        </div>
       </div>
     </main>
   </body>
